--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^6.19.4",
     "firebase": "^10.8.0",
     "next": "14.1.0",
+    "next-intl": "^3.9.0",
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
