--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^6.19.4",
     "firebase": "^10.8.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
     "next-intl": "^3.9.0",
     "react": "^18",
     "react-dom": "^18",
@@ -30,6 +31,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "typescript": "^5.2.2"
   }
 }
