--- a/package.json
+++ b/package.json
@@ -9,21 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@mui/material-nextjs": "^5.15.9",
-    "@mui/x-date-pickers": "^6.19.4",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-intl": "^3.9.0",
     "react": "^18",
     "react-dom": "^18",
-    "server-only": "^0.0.1",
-    "zod": "^3.22.4"
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
