--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.8.0",
+    "@clerk/localizations": "^1.26.16",
+    "@clerk/nextjs": "^4.29.8",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-intl": "^3.9.0",
     "react": "^18",
-    "react-dom": "^18",
-    "server-only": "^0.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
