--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@clerk/localizations": "^1.26.16",
     "@clerk/nextjs": "^4.29.8",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.10.2",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-intl": "^3.9.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "react-select": "^5.8.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,6 +32,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2"
   }
