:sparkles: Add stripe and inngest
Add stripe and inngest

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.29.8",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
+    "inngest": "^3.16.1",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-intl": "^3.9.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-select": "^5.8.0",
+    "stripe": "^14.21.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
