--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.14.0",
     "inngest": "^3.16.1",
-    "next": "14.1.0",
+    "lucide-react": "^0.408.0",
+    "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.13",
     "next-intl": "^3.9.0",
     "react": "^18",
