--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-phone-number-input": "^3.4.3",
     "react-select": "^5.8.0",
     "stripe": "^14.21.0",
     "zod": "^3.22.4"
