--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kollage_dashboard",
+  "name": "envol_dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -36,7 +36,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.10.2",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2"
   }
