:heavy_plus_sign: Added tooltips

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-phone-number-input": "^3.4.3",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "stripe": "^14.21.0",
     "zod": "^3.22.4"
   },
