--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.29.8",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.14.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "inngest": "^3.16.1",
     "lucide-react": "^0.408.0",
