--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@clerk/localizations": "^1.26.16",
-    "@clerk/nextjs": "^4.29.8",
+    "@clerk/nextjs": "^5.3.3",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.14.0",
     "clsx": "^2.1.1",
@@ -20,14 +20,15 @@
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.13",
     "next-intl": "^3.9.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-phone-number-input": "^3.4.3",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
     "stripe": "^14.21.0",
+    "tailwind-merge": "^2.5.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
