:necktie: Add email to profile form

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^1.9.2",
     "@clerk/localizations": "^1.26.16",
     "@clerk/nextjs": "^5.4.1",
     "@hookform/resolvers": "^3.3.4",
