--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/backend": "^1.9.2",
     "@clerk/localizations": "^1.26.16",
     "@clerk/nextjs": "^5.4.1",
+    "@headlessui/react": "^2.1.8",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.14.0",
     "clsx": "^2.1.1",
