:heavy_plus_sign: Add vercel blob and image tables

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@clerk/nextjs": "^5.5.3",
     "@headlessui/react": "^2.1.8",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.19.1",
     "@types/jest": "^29.5.13",
+    "@vercel/blob": "^0.24.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "inngest": "^3.16.1",
@@ -51,7 +52,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.14.0",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
