--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "server-only": "^0.0.1",
     "stripe": "^14.21.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.22.4",
