:white_check_mark: Tests for hooks

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .pnp.js
 .yarn/install-state.gz
 
+
 # testing
 /coverage
 /mocks
@@ -21,6 +22,8 @@
 # misc
 .DS_Store
 *.pem
+/.vscode
+/.swc
 
 # debug
 npm-debug.log*
